[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/cfc/src/dreamscape/CardLibrary/ListCardObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/cfc/src/dreamscape/InfoPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/cfc/src/core/CardViewer/CardLibrary/CardLibrary.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/cfc/src/dreamscape/CardLibrary/CardLibrary.gd" type="Script" id=4]
[ext_resource path="res://addons/cfc/src/dreamscape/CardLibrary/ArchetypeFilter.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 0.4, 0, 1 )
thickness = 2

[node name="CardLibrary" instance=ExtResource( 3 )]
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
info_panel_scene = ExtResource( 2 )
list_card_object_scene = ExtResource( 1 )
property_width_exceptions = {
"Cost": 30
}

[node name="MC" parent="VBC/HBC" index="0"]
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="AvailableCards" parent="VBC/HBC/MC" index="0"]
margin_left = 5.0
margin_right = 1915.0

[node name="FilterLine" parent="VBC/HBC/MC/AvailableCards/HBC" index="1"]
criteria_map = {
"a": "Abilities",
"c": "Cost",
"g": "Tags",
"r": "_rarity",
"t": "Type"
}

[node name="ButtonFilters" parent="VBC/HBC/MC/AvailableCards/CC" index="0"]
margin_left = 871.0
margin_right = 1038.0

[node name="ArchetypeFilter" type="MenuButton" parent="VBC/HBC/MC/AvailableCards/CC/ButtonFilters" index="0"]
margin_right = 133.0
margin_bottom = 30.0
text = "Filter by Archetype"
flat = false
script = ExtResource( 5 )

[node name="ShowAll" parent="VBC/HBC/MC/AvailableCards/CC/ButtonFilters" index="1"]
margin_left = 137.0
margin_right = 167.0

[node name="LineSeparator" parent="VBC/HBC/MC/AvailableCards" index="3"]
custom_styles/panel = SubResource( 2 )

[node name="Back" type="Button" parent="VBC/HBC/MC/AvailableCards/Settings" index="0"]
margin_right = 42.0
margin_bottom = 40.0
text = "Back"

[node name="Control" parent="VBC/HBC/MC/AvailableCards/Settings" index="1"]
margin_left = 46.0

[connection signal="gui_input" from="VBC/HBC/MC/AvailableCards/CC/ButtonFilters/ArchetypeFilter" to="VBC/HBC/MC/AvailableCards/CC/ButtonFilters/ArchetypeFilter" method="_on_ArchetypeFilter_gui_input"]
